--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.6",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
