--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.6",
+    "dotenv": "^16.5.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.4",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
