--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.6",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.4",
