--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.4",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.1.0",
